--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
 				</div>
 				<div class="info">
 					<h3><u>Personal information</u></h3>
-					<p><b>Name:</b>Shyam Vasandani</p>
+					<p><b>Name:</b>Vedant Najkani</p>
 					<p><b>Current Job:</b>Web developer</p>	
-					<p><b>D.O.B:</b>5 April 2005</p>
+					<p><b>D.O.B:</b>13 December 2005</p>
 					<p><b>Gender:</b>Male</p>
 					<p><b>Social Status:</b>Bachelor</p>
 					<p><b>Address:</b>XYZ Society Ahmedabad,Gujarat,India </p>
-					<p><b>Contact.Number:</b>9904782224</p>
-					<p><b>Email:</b><u style="color:blue;">XYZ2323@gmail.com</p></u>
+					<p><b>Contact.Number:</b>9726762413</p>
+					<p><b>Email:</b><u style="color:blue;">vedantnajkani@gmail.com</p></u>
 					<p><b>Job Profile:</b>I am A develpor at Service Base company for a longer period of time <br> i am qualified and able to cope up with the challenges </p>
 					
 				</div>
