--- a/contact.html
+++ b/contact.html
@@ -47,12 +47,12 @@
 					</div>
 			<div style="margin-left:50px;">
 			<p>Contact Me:</p>
-				<h4>Shyam Vasandani<br>
+				<h4>Vedant Najkani</h4><br>
 				<b>Web developer</b><br>
 				<i>Quickbooks</i><br>
 				9904782224<br>
 				<a href="">XYZ2323@gmail.com</a><br>
-				<a href="">linkedin.com&shyam-vasandani</h4>
+				<a href="">linkedin.com&vedant najkani</h4>
 			</div>
 			
 			</body>	
